# chemputation

./: README.md  pyproject.toml
data/: reaction_summary.json  xdl_stats.csv  xdl_stats_single.csv  xdl_steps_per_rxn_step.csv
notebooks/: ChemicalTuringMachine.nb  Figure6.py  Figure7.ipynb  reaction_display.ipynb  reaction_display_data.xlsx
src/rxnframe/: __init__.py  main.py
